--- a/app/src/main/res/layout-v21/activity_sign_in.xml
+++ b/app/src/main/res/layout-v21/activity_sign_in.xml
@@ -3,7 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:scrollbarStyle="insideOverlay"
     android:scrollbars="none">
 
     <android.support.constraint.ConstraintLayout
@@ -86,6 +85,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="24dp"
             android:text="@string/forget_password"
+
             android:textAlignment="center"
             android:textColor="@color/colorAccent"
             android:textSize="12sp"
@@ -103,6 +103,7 @@
             android:layout_marginStart="@dimen/sign_in_margins"
             android:layout_marginTop="24dp"
             android:background="@color/colorPrimaryDark"
+            android:elevation="3dp"
             android:text="@string/enter"
             android:textAlignment="center"
             android:textColor="@android:color/white"
