--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
-    <color name="gray">#444440</color>
+    <color name="colorPrimary">#039BE5</color>
+    <color name="colorPrimaryDark">#01579B</color>
+    <color name="colorAccent">#039BE5</color>
+    <color name="colorWhite">#ffffff</color>
     <color name="mainBackground">#e2e2e2</color>
+    <color name="lightgray">#D3D3D3</color>
+    <color name="silver">#e6e6e6</color>
+
+    <color name="test_result_right_answer">#1100FF00</color>
+    <color name="test_result_wrong_answer">#11FF0000</color>
+
+    <color name="color_bad_vote">#D64338</color>
+    <color name="color_good_vote">#66CC66</color>
 </resources>
