--- a/app/src/main/res/layout-v21/activity_sign_in.xml
+++ b/app/src/main/res/layout-v21/activity_sign_in.xml
@@ -6,6 +6,7 @@
     android:scrollbars="none">
 
     <android.support.constraint.ConstraintLayout
+        android:id="@+id/login_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:descendantFocusability="beforeDescendants"
@@ -52,7 +53,7 @@
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
-            android:id="@+id/textInputLayout"
+            android:id="@+id/login_password_wrapper"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/sign_in_margins"
@@ -91,7 +92,7 @@
             android:textSize="12sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
+            app:layout_constraintTop_toBottomOf="@+id/login_password_wrapper" />
 
         <Button
             android:id="@+id/button_login"
