--- a/app/src/main/res/layout-v21/activity_sign_up.xml
+++ b/app/src/main/res/layout-v21/activity_sign_up.xml
@@ -26,9 +26,11 @@
             android:layout_marginTop="56dp"
             android:contentDescription="@null"
             android:src="@drawable/logo"
+            android:transitionName="logoImage"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/input_name_wrapper"
