--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -63,6 +63,7 @@
             android:layout_marginStart="@dimen/sign_in_margins"
             android:layout_marginTop="8dp"
             android:orientation="horizontal"
+            app:errorTextAppearance="@style/error_appearance"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/login_email_wrapper"
