--- a/app/src/main/res/layout-v21/activity_sign_in.xml
+++ b/app/src/main/res/layout-v21/activity_sign_in.xml
@@ -104,7 +104,7 @@
             android:layout_marginRight="@dimen/sign_in_margins"
             android:layout_marginStart="@dimen/sign_in_margins"
             android:layout_marginTop="24dp"
-            android:background="@color/colorPrimaryDark"
+            android:background="@drawable/ripple_button"
             android:elevation="3dp"
             android:text="@string/enter"
             android:textAlignment="center"
