--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,13 @@
     <dimen name="sign_logo_height">150dp</dimen>
 
     <dimen name="sign_in_margins">16dp</dimen>
+
+    <!--Article Category Item-->
+    <dimen name="article_category_item_card_height">100dp</dimen>
+    <dimen name="article_category_item_card_margin_all">8dp</dimen>
+    <dimen name="article_category_item_image_dp">100dp</dimen>
+    <dimen name="article_category_item_image_margin_right">4dp</dimen>
+    <dimen name="article_category_item_name_size">13sp</dimen>
+    <dimen name="article_category_item_description_size">11sp</dimen>
+
 </resources>
