--- a/app/src/main/res/layout/article_list_item.xml
+++ b/app/src/main/res/layout/article_list_item.xml
@@ -2,7 +2,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <android.support.v7.widget.CardView
@@ -13,7 +12,6 @@
         <TextView
             android:id="@+id/article_list_item_title"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:text="TextView" />
+            android:layout_height="wrap_content" />
     </android.support.v7.widget.CardView>
 </LinearLayout>
