--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -25,6 +25,15 @@
                 app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
             </android.support.v7.widget.Toolbar>
 
+            <ProgressBar
+                android:theme="@style/LinearProgress"
+                android:id="@+id/progress_bar_main"
+                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/activity_main_progress_bar"
+                android:indeterminate="true"
+                android:visibility="invisible" />
+
         </android.support.design.widget.AppBarLayout>
 
         <FrameLayout
