--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,5 +17,10 @@
         <item name="android:textSize">12sp</item>
     </style>
 
+    <style name="LinearProgress" parent="Theme.AppCompat.Light">
+        <item name="colorAccent">@color/colorWhite</item>
+        <!--<item name="android:progressBackgroundTint">@color/pink</item>-->
+    </style>
+
 
 </resources>
