--- a/app/src/main/res/layout/article_category_item.xml
+++ b/app/src/main/res/layout/article_category_item.xml
@@ -2,30 +2,24 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="@dimen/article_category_item_card_height"
-        android:layout_marginBottom="@dimen/article_category_item_card_margin_all"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/article_category_item_card_margin_all"
         android:layout_marginLeft="@dimen/article_category_item_card_margin_all"
         android:layout_marginRight="@dimen/article_category_item_card_margin_all"
         android:layout_marginStart="@dimen/article_category_item_card_margin_all"
-        android:layout_marginTop="@dimen/article_category_item_card_margin_all"
-        app:cardBackgroundColor="@color/cardview_light_background"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0">
+        app:cardBackgroundColor="@color/cardview_light_background">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
+            android:layout_height="wrap_content"
+            android:minHeight="@dimen/article_category_item_card_height"
+            android:orientation="horizontal"
+            android:padding="6dp">
 
             <ImageView
                 android:id="@+id/article_category_item_imageview"
@@ -70,4 +64,9 @@
         </LinearLayout>
     </android.support.v7.widget.CardView>
 
+    <View
+        android:id="@+id/grey_bar"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/silver" />
 </LinearLayout>
