--- a/app/src/main/res/layout/article_list_item.xml
+++ b/app/src/main/res/layout/article_list_item.xml
@@ -1,17 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp">
+        android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/article_list_item_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:minHeight="@dimen/article_list_item_card_height"
+            android:orientation="horizontal"
+            android:padding="6dp">
+
+            <ImageView
+                android:id="@+id/article_list_item_imageview"
+                android:layout_width="@dimen/article_list_item_image_dp"
+                android:layout_height="@dimen/article_list_item_image_dp"
+                android:layout_marginEnd="@dimen/article_list_item_image_margin_right"
+                android:layout_marginRight="@dimen/article_list_item_image_margin_right" />
+
+            <TextView
+                android:id="@+id/article_list_item_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="Spring MVC — основные понятия, архитектура." />
+        </LinearLayout>
+
     </android.support.v7.widget.CardView>
+
+    <View
+        android:id="@+id/grey_bar"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/silver" />
 </LinearLayout>
